--- a/src/_data/navigation.yml
+++ b/src/_data/navigation.yml
@@ -9,8 +9,8 @@
   link: jordan-breen/
 - name: Karolina Budzowska
   link: karolina-budzowska/
-# - name: Liam Bull
-#   link: toby-beattie/
+- name: Liam Bull
+  link: liam-bull/
 - name: Sam Butterworth
   link: sam-butterworth/
 - name: Abbie Carter Sleightholme
@@ -59,30 +59,30 @@
   link: sophie-knowles/
 - name: Sean Lee
   link: sean-lee/
-# - name: Emily Long
-#   link: toby-beattie/
-# - name: Ellie Maguire
-#   link: toby-beattie/
-# - name: Zahra Mahmoud
-#   link: toby-beattie/
-# - name: Carrigan Mannion
-#   link: toby-beattie/
-# - name: Jess Martin
-#   link: toby-beattie/
-# - name: Sophie Mcconville
-#   link: toby-beattie/
-# - name: Shaunie Mclaughlin
-#   link: toby-beattie/
+- name: Emily Long
+  link: emily-long/
+- name: Ellie Maguire
+  link: eleanor-maguire/
+- name: Zahra Mahmoud
+  link: zahra-mahmoud/
+- name: Carrigan Mannion
+  link: carrigan-mannion/
+- name: Jess Martin
+  link: jess-martin/
+- name: Sophie Mcconville
+  link: sophie-mconville/
+- name: Shaunie Mclaughlin
+  link: shaunie-mclaughlin/
 - name: Megan Milliken-Holmes
   link: megan-millikan-holmes/
-# - name: Shep Morgan
-#   link: toby-beattie/
-# - name: Rammie Motlek
-#   link: toby-beattie/
+- name: Shep Morgan
+  link: shep-morgan/
+- name: Rammie Motlek
+  link: rammie-motlek/
 # - name: Charlie Payne-Woolridge
 #   link: toby-beattie/
-# - name: Morgan Phillips
-#   link: toby-beattie/
+- name: Morgan Phillips
+  link: morgan-phillips/
 # - name: Rose Ryan
 #   link: toby-beattie/
 # - name: Natasha Salthouse
