--- a/src/_data/navigation.yml
+++ b/src/_data/navigation.yml
@@ -21,8 +21,8 @@
   link: charmaine-chizema/
 - name: Andra-Maria Cobuz-Bagnaru
   link: andra-maria-cobuz-bagnaru/
-# - name: Raife Cooper
-#   link: toby-beattie/
+- name: Raife Cooper
+  link: raife-cooper/
 - name: Freya Crawford
   link: freya-crawford/
 # - name: Lucy Dodd-Martin
@@ -83,39 +83,39 @@
 #   link: toby-beattie/
 - name: Morgan Phillips
   link: morgan-phillips/
-# - name: Rose Ryan
-#   link: toby-beattie/
-# - name: Natasha Salthouse
-#   link: toby-beattie/
+- name: Erin Rose
+  link: erin-rose/
+- name: Rose Ryan
+  link: rose-ryan/
+- name: Natasha Salthouse
+  link: natasha-salthouse/
 # - name: Hollie Schultz-Hebborn
 #   link: toby-beattie/
 - name: Olivia Spencer
   link: olivia-spencer/
-# - name: Andrea Stables
-#   link: toby-beattie/
-# - name: Erin Stanton
-#   link: toby-beattie/
-# - name: Georgia Stott
-#   link: toby-beattie/
+- name: Andrea Stables
+  link: andrea-stables/
+- name: Georgia Stott
+  link: georgia-stott/
 - name: Gemma Strachan
   link: gemma-strachan/
-# - name: Lois Surga
-#   link: toby-beattie/
-# - name: Josh Taylor
-#   link: toby-beattie/
-# - name: Ellie Trussell
-#   link: toby-beattie/
-# - name: Charlotte Walker
-#   link: toby-beattie/
+- name: Lois Surga
+  link: lois-surga/
+- name: Josh Taylor
+  link: joshua-taylor/
+- name: Ellie Trussell
+  link: eleanor-trussell/
+- name: Charlotte Walker
+  link: charlotte-walker/
 - name: Nazim Warrilow
   link: nazmataz/
-# - name: Alicia Widlof
-#   link: toby-beattie/
-# - name: Lauren Williams
-#   link: toby-beattie/
-# - name: Matilda Williamson
-#   link: toby-beattie/
-# - name: Tom Wilson
-#   link: toby-beattie/
+- name: Alicia Widlof
+  link: alicia-widlof/
+- name: Matilda Angel Williamson
+  link: matilda-angel-williamson/
+- name: Tom Wilson
+  link: tom-wilson/
 # - name: Cait Winkler
 #   link: toby-beattie/
+- name: Lauren Wyn
+  link: lauren-wyn/
