--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 
 base_url: "http://127.0.0.1:4000/"
-#base_url: "http://graphics-lsad.co.uk/2021/"
+base_url: "http://graphics-lsad.co.uk/2021/"
 url: "http://graphics-lsad.co.uk/2021/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
