--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 base_url: "http://127.0.0.1:4000/"
 #base_url: "http://graphics-lsad.co.uk/2021/"
-url: "http://graphics-lsad.co.uk/2021/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://graphics-lsad.co.uk/2021" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 plugins:
@@ -25,7 +25,7 @@ sass:
   sass_dir: _scss
   style: :compressed
 
-#plugins:
-#  - jekyll-sitemap
+plugins:
+ - jekyll-sitemap
 
 markdown: kramdown
